[gd_scene format=4 uid="uid://4pqund3nukl7"]

[ext_resource type="Texture2D" uid="uid://4q335xxs2p" path="res://icon.svg" id="1_0e48y"]
[ext_resource type="Script" uid="uid://80kl10p8d3vr" path="res://player.gd" id="1_epypp"]
[ext_resource type="Texture2D" uid="uid://httoncq5l2pp" path="res://spritesheet-tiles-default.png" id="1_wtcfe"]
[ext_resource type="Script" uid="uid://dtdkcx2l0wc6" path="res://dash_effect_time.gd" id="3_q6r6c"]
[ext_resource type="Script" uid="uid://00022uvso0c2" path="res://dash_cooldown_time.gd" id="4_kdubu"]
[ext_resource type="Script" uid="uid://d4gcx6eixxv88" path="res://area_2d.gd" id="6_kdubu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_epypp"]
size = Vector2(97, 48)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0e48y"]
texture = ExtResource("1_wtcfe")
separation = Vector2i(1, 1)
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
12:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:7/0 = 0
13:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:7/0 = 0
14:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
15:7/0 = 0
15:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
16:7/0 = 0
16:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
17:7/0 = 0
17:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:8/0 = 0
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:8/0 = 0
5:8/0 = 0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:8/0 = 0
10:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:8/0 = 0
11:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:8/0 = 0
12:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:8/0 = 0
13:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
16:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
17:8/0 = 0
17:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:9/0 = 0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
11:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:9/0 = 0
12:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:9/0 = 0
13:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:9/0 = 0
14:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
15:9/0 = 0
16:9/0 = 0
16:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
17:9/0 = 0
17:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:10/0 = 0
4:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:10/0 = 0
5:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:10/0 = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, 2.8223686, 32, 32, -32, 32)
7:10/0 = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -0.564476, 32, 32, 32, 32, -32, 32)
8:10/0 = 0
9:10/0 = 0
9:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 27.09475, -32, 32, -27.094746, 32, 32, -32, 32)
10:10/0 = 0
10:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, 32, 32, 32, -32, 32)
11:10/0 = 0
11:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:10/0 = 0
12:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:10/0 = 0
13:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:10/0 = 0
14:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
15:10/0 = 0
15:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
16:10/0 = 0
16:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
17:10/0 = 0
17:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:11/0 = 0
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:11/0 = 0
1:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:11/0 = 0
2:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:11/0 = 0
3:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:11/0 = 0
4:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:11/0 = 0
5:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:11/0 = 0
6:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:11/0 = 0
7:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:11/0 = 0
8:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:11/0 = 0
9:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:11/0 = 0
10:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:11/0 = 0
11:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:11/0 = 0
12:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:11/0 = 0
13:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:11/0 = 0
14:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
15:11/0 = 0
15:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
16:11/0 = 0
16:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
17:11/0 = 0
17:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:12/0 = 0
0:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:12/0 = 0
1:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:12/0 = 0
2:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:12/0 = 0
3:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:12/0 = 0
4:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:12/0 = 0
5:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:12/0 = 0
6:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:12/0 = 0
7:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:12/0 = 0
8:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:12/0 = 0
9:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:12/0 = 0
10:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:12/0 = 0
11:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:12/0 = 0
12:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:12/0 = 0
13:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:12/0 = 0
14:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
15:12/0 = 0
15:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
16:12/0 = 0
16:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
17:12/0 = 0
17:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:13/0 = 0
0:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:13/0 = 0
1:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:13/0 = 0
2:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:13/0 = 0
3:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:13/0 = 0
4:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:13/0 = 0
5:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:13/0 = 0
6:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:13/0 = 0
7:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:13/0 = 0
8:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:13/0 = 0
9:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:13/0 = 0
10:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:13/0 = 0
11:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:13/0 = 0
12:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:13/0 = 0
13:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:13/0 = 0
14:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
15:13/0 = 0
15:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
16:13/0 = 0
16:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
17:13/0 = 0
17:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:14/0 = 0
0:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:14/0 = 0
1:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:14/0 = 0
2:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:14/0 = 0
3:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:14/0 = 0
4:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:14/0 = 0
5:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:14/0 = 0
6:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:14/0 = 0
7:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:14/0 = 0
8:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:14/0 = 0
9:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:14/0 = 0
10:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:14/0 = 0
11:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:14/0 = 0
12:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:14/0 = 0
13:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:14/0 = 0
14:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
15:14/0 = 0
15:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
16:14/0 = 0
16:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
17:14/0 = 0
17:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:15/0 = 0
0:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:15/0 = 0
1:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:15/0 = 0
2:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:15/0 = 0
3:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:15/0 = 0
4:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:15/0 = 0
5:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:15/0 = 0
6:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:15/0 = 0
7:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:15/0 = 0
8:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:15/0 = 0
9:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:15/0 = 0
10:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:15/0 = 0
11:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:15/0 = 0
12:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:15/0 = 0
13:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:15/0 = 0
14:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
15:15/0 = 0
15:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
16:15/0 = 0
16:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
17:15/0 = 0
17:15/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:16/0 = 0
0:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:16/0 = 0
1:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:16/0 = 0
2:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:16/0 = 0
3:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:16/0 = 0
4:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:16/0 = 0
5:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
6:16/0 = 0
6:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:16/0 = 0
7:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:16/0 = 0
8:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
9:16/0 = 0
9:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
10:16/0 = 0
10:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
11:16/0 = 0
11:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
12:16/0 = 0
12:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
13:16/0 = 0
13:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
14:16/0 = 0
14:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
15:16/0 = 0
15:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
16:16/0 = 0
16:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
17:16/0 = 0
17:16/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0

[sub_resource type="TileSet" id="TileSet_epypp"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_0e48y")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kdubu"]
radius = 60.0
height = 124.0

[node name="level" type="Node2D" unique_id=1884338669]
position = Vector2(10, 253)

[node name="player" type="CharacterBody2D" parent="." unique_id=1531656092]
position = Vector2(4113, -101)
script = ExtResource("1_epypp")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="player" unique_id=1777392512]
position = Vector2(5.500002, -9.749998)
scale = Vector2(0.78906256, 0.42578125)
texture = ExtResource("1_0e48y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player" unique_id=1382505677]
position = Vector2(4.5, -9)
shape = SubResource("RectangleShape2D_epypp")
metadata/_edit_group_ = true

[node name="Dash_effect_time" type="Timer" parent="player" unique_id=299013514]
wait_time = 0.5
one_shot = true
script = ExtResource("3_q6r6c")

[node name="Dash_cooldown_time" type="Timer" parent="player" unique_id=500258493]
wait_time = 0.1
one_shot = true
script = ExtResource("4_kdubu")

[node name="Camera2D" type="Camera2D" parent="player" unique_id=937986057]
zoom = Vector2(0.9, 0.9)
position_smoothing_enabled = true

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=1841177300]
tile_map_data = PackedByteArray("AAABAAEAAAALAAkAAAACAAEAAAALAAkAAAADAAEAAAALAAkAAAAEAAEAAAALAAkAAAAAAAEAAAAMAAkAAAAFAAEAAAALAAkAAAAGAAEAAAALAAkAAAAHAAEAAAALAAkAAAAIAAEAAAALAAkAAAAJAAEAAAANAAkAAAAFAAAAAAAKAAIAAAAGAAAAAAAKAAIAAAABAAAAAAAQAAYAAAASAAEAAAAMAAkAAAAUAAEAAAALAAkAAAATAAEAAAALAAkAAAASAAIAAAAJAAkAAAATAAIAAAAIAAkAAAAUAAIAAAAIAAkAAAATAAMAAAAIAAkAAAAUAAMAAAAIAAkAAAASAAMAAAAJAAkAAAAJAAIAAAAKAAkAAAAAAAIAAAAJAAkAAAABAAIAAAAIAAkAAAACAAIAAAAIAAkAAAADAAIAAAAIAAkAAAAEAAIAAAAIAAkAAAAFAAIAAAAIAAkAAAAGAAIAAAAIAAkAAAAHAAIAAAAIAAkAAAAIAAIAAAAIAAkAAAAUAAQAAAAIAAkAAAAUAAUAAAAIAAkAAAATAAQAAAAIAAkAAAATAAUAAAAIAAkAAAASAAQAAAAJAAkAAAASAAUAAAAJAAkAAAAKAAQAAAAEABEAAAALAAQAAAAEABEAAAAMAAQAAAAEABEAAAANAAQAAAAEABEAAAAOAAQAAAAEABEAAAAPAAQAAAAEABEAAAAQAAQAAAAEABEAAAARAAQAAAAEABEAAAAKAAUAAAADABEAAAALAAUAAAADABEAAAAMAAUAAAADABEAAAANAAUAAAADABEAAAAOAAUAAAADABEAAAAPAAUAAAADABEAAAAQAAUAAAADABEAAAARAAUAAAADABEAAAAJAAMAAAAKAAkAAAAJAAQAAAAKAAkAAAAJAAUAAAAKAAkAAAAAAAMAAAAJAAkAAAAAAAQAAAAJAAkAAAAAAAUAAAAJAAkAAAABAAMAAAAIAAkAAAACAAMAAAAIAAkAAAADAAMAAAAIAAkAAAAEAAMAAAAIAAkAAAAFAAMAAAAIAAkAAAAGAAMAAAAIAAkAAAAHAAMAAAAIAAkAAAAIAAMAAAAIAAkAAAAIAAQAAAAIAAkAAAAHAAQAAAAIAAkAAAAGAAQAAAAIAAkAAAAFAAQAAAAIAAkAAAAEAAQAAAAIAAkAAAADAAQAAAAIAAkAAAACAAQAAAAIAAkAAAABAAQAAAAIAAkAAAABAAUAAAAIAAkAAAACAAUAAAAIAAkAAAADAAUAAAAIAAkAAAAEAAUAAAAIAAkAAAAFAAUAAAAIAAkAAAAGAAUAAAAIAAkAAAAHAAUAAAAIAAkAAAAIAAUAAAAIAAkAAAAVAAEAAAALAAkAAAAWAAEAAAALAAkAAAAXAAEAAAALAAkAAAAYAAEAAAALAAkAAAAZAAEAAAANAAkAAAAZAAIAAAAKAAkAAAAZAAMAAAAKAAkAAAAZAAQAAAAKAAkAAAAZAAUAAAAKAAkAAAAVAAIAAAAIAAkAAAAWAAIAAAAIAAkAAAAXAAIAAAAIAAkAAAAYAAIAAAAIAAkAAAAYAAMAAAAIAAkAAAAXAAMAAAAIAAkAAAAWAAMAAAAIAAkAAAAVAAMAAAAIAAkAAAAVAAQAAAAIAAkAAAAWAAQAAAAIAAkAAAAXAAQAAAAIAAkAAAAYAAQAAAAIAAkAAAAXAAUAAAAIAAkAAAAWAAUAAAAIAAkAAAAVAAUAAAAIAAkAAAAYAAUAAAAIAAkAAAAiAAEAAAADAAoAAAAjAAEAAAAEAAoAAAArAAAAAAADAAoAAAAsAAAAAAAEAAoAAAA0AP//AAADAAoAAAA1AP//AAAEAAoAAAA+AP//AAAMAAkAAAA/AP//AAALAAkAAABAAP//AAALAAkAAABBAP//AAALAAkAAABCAP//AAALAAkAAABDAP//AAALAAkAAABJAP//AAAQAAkAAABKAP//AAARAAkAAABLAP//AAAAAAoAAABBAP7/AAAQAAYAAAAWAAAAAAAQAAYAAABKAP7/AAACAAMAAABUAP//AAAMAAkAAABVAP//AAALAAkAAABWAP//AAALAAkAAABXAP//AAAGAAoAAABYAP//AAAHAAoAAABYAAAAAAAIAAoAAABXAAAAAAAIAAkAAABWAAAAAAAIAAkAAABVAAAAAAAIAAkAAABUAAAAAAAJAAkAAABZAAAAAAAGAAoAAABaAAAAAAAHAAoAAABaAAEAAAAIAAoAAABZAAEAAAAIAAkAAABYAAEAAAAIAAkAAABXAAEAAAAIAAkAAABWAAEAAAAIAAkAAABVAAEAAAAIAAkAAABVAAIAAAAIAAkAAABWAAIAAAAIAAkAAABXAAIAAAAIAAkAAABYAAIAAAAIAAkAAABZAAIAAAAIAAkAAABaAAIAAAAIAAkAAABbAAEAAAAGAAoAAABcAAEAAAAHAAoAAABUAAEAAAAJAAkAAABUAAIAAAAJAAkAAABbAAIAAAAIAAkAAABcAAIAAAAIAAoAAABdAAIAAAAGAAoAAABhAP//AAAQAAkAAABiAP//AAARAAkAAABjAP//AAAAAAoAAABeAAIAAAAHAAoAAABUAAYAAAADAAoAAABdAAYAAAADAAoAAABeAAYAAAAEAAoAAABaAAYAAAAEAAoAAABZAAYAAAADAAoAAABVAAYAAAACAAoAAABWAAYAAAAEAAoAAABVAAUAAAABAAMAAABjAAUAAAADAAoAAABkAAUAAAAEAAoAAABpAAMAAAADAAoAAABqAAMAAAAEAAoAAABwAAMAAAADAAoAAABxAAMAAAAEAAoAAABrAP//AAAQAAkAAABsAP//AAARAAkAAABtAP//AAAAAAoAAAB0AP//AAAQAAkAAAB1AP//AAARAAkAAAB2AP//AAAAAAoAAAB5AAMAAAADAAoAAAB6AAMAAAACAAoAAABVAP7/AAAQAAYAAACHAP//AAAEAAIAAACIAP//AAAEAAIAAACJAP//AAAEAAIAAACKAP//AAAEAAIAAACLAP//AAAEAAIAAACMAP//AAAEAAIAAACNAP//AAAEAAIAAACOAP//AAAEAAIAAACPAP//AAAEAAIAAACXAP//AAALAAkAAACYAP//AAALAAkAAACZAP//AAALAAkAAACaAP//AAALAAkAAACbAP//AAALAAkAAACcAP//AAALAAkAAACdAP//AAALAAkAAACeAP//AAALAAkAAACfAP//AAALAAkAAACmAP//AAACAAYAAACqAP//AAAEAAYAAACyAP//AAACAAYAAAC7AP//AAAFAAYAAAC3AAQAAAACAAYAAADAAAQAAAACAAYAAAClAP//AAACAAYAAACkAP//AAACAAYAAACrAP//AAAEAAYAAACsAP//AAAEAAYAAACzAP//AAACAAYAAAC0AP//AAACAAYAAAC8AP//AAAFAAYAAAC9AP//AAAFAAYAAAC2AAQAAAACAAYAAAC4AAQAAAACAAYAAADBAAQAAAACAAYAAADCAAQAAAACAAYAAADGAAMAAAADAAoAAADHAAMAAAAEAAoAAADKAAIAAAADAAoAAADLAAIAAAAEAAoAAADOAAEAAAADAAoAAADPAAEAAAAEAAoAAADSAAAAAAADAAoAAADTAAAAAAAEAAoAAADWAP//AAADAAoAAADXAP//AAAEAAoAAADdAP//AAAMAAkAAADeAP//AAALAAkAAADfAP//AAALAAkAAADgAP//AAALAAkAAADhAP//AAALAAkAAADiAP//AAALAAkAAADjAP//AAALAAkAAADkAP//AAALAAkAAADlAP//AAALAAkAAADmAP//AAANAAkAAADdAAAAAAAJAAkAAADdAAEAAAAJAAkAAADdAAIAAAAJAAkAAADdAAMAAAAJAAkAAADdAAQAAAAJAAkAAADdAAUAAAAJAAkAAADmAAAAAAAKAAkAAADmAAEAAAAKAAkAAADmAAIAAAAKAAkAAADmAAMAAAAKAAkAAADmAAQAAAAIAAkAAADmAAUAAAAIAAkAAADeAAAAAAAIAAkAAADfAAAAAAAIAAkAAADgAAAAAAAIAAkAAADhAAAAAAAIAAkAAADiAAAAAAAIAAkAAADjAAAAAAAIAAkAAADkAAAAAAAIAAkAAADlAAAAAAAIAAkAAADlAAEAAAAIAAkAAADkAAEAAAAIAAkAAADjAAEAAAAIAAkAAADiAAEAAAAIAAkAAADhAAEAAAAIAAkAAADgAAEAAAAIAAkAAADfAAEAAAAIAAkAAADeAAEAAAAIAAkAAADeAAIAAAAIAAkAAADfAAIAAAAIAAkAAADgAAIAAAAIAAkAAADhAAIAAAAIAAkAAADiAAIAAAAIAAkAAADjAAIAAAAIAAkAAADkAAIAAAAIAAkAAADlAAIAAAAIAAkAAADlAAMAAAAIAAkAAADkAAMAAAAIAAkAAADjAAMAAAAIAAkAAADiAAMAAAAIAAkAAADhAAMAAAAIAAkAAADgAAMAAAAIAAkAAADfAAMAAAAIAAkAAADeAAMAAAAIAAkAAADeAAQAAAAIAAkAAADfAAQAAAAIAAkAAADgAAQAAAAIAAkAAADhAAQAAAAIAAkAAADiAAQAAAAIAAkAAADjAAQAAAAIAAkAAADkAAQAAAAIAAkAAADlAAQAAAAIAAkAAADlAAUAAAAIAAkAAADkAAUAAAAIAAkAAADjAAUAAAAIAAkAAADiAAUAAAAIAAkAAADhAAUAAAAIAAkAAADgAAUAAAAIAAkAAADfAAUAAAAIAAkAAADeAAUAAAAIAAkAAADmAP7/AAAHABEAAADkAP7/AAAOAAYAAACxAP//AAACAAYAAACwAP//AAACAAYAAAB7AAMAAAAEAAoAAAB+AAIAAAAEAAoAAAB9AAIAAAADAAoAAAB5AP//AAADAAoAAAB6AP//AAAEAAoAAACAAAEAAAADAAoAAACBAAEAAAAEAAoAAACDAAAAAAADAAoAAACEAAAAAAAEAAoAAAB9AP//AAADAAoAAAB+AP//AAAEAAoAAAAnAAEAAAADAAoAAAAoAAEAAAAEAAoAAAAwAAAAAAADAAoAAAAxAAAAAAAEAAoAAABFAP//AAADAAoAAABGAP//AAAEAAoAAABcAP7/AAADAAoAAABdAP7/AAAEAAoAAABmAP//AAADAAoAAABnAP//AAAEAAoAAABwAP//AAADAAoAAABxAP//AAAEAAoAAAA=")
tile_set = SubResource("TileSet_epypp")

[node name="Checkpoint1" type="Area2D" parent="." unique_id=1864978674]
position = Vector2(4766, -140)
script = ExtResource("6_kdubu")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoint1" unique_id=862185875]
shape = SubResource("CapsuleShape2D_kdubu")

[connection signal="tree_entered" from="player" to="player" method="_on_tree_entered"]
[connection signal="timeout" from="player/Dash_effect_time" to="player" method="_on_dash_effect_time_timeout"]
[connection signal="timeout" from="player/Dash_cooldown_time" to="player" method="_on_dash_cooldown_time_timeout"]
[connection signal="body_entered" from="Checkpoint1" to="Checkpoint1" method="_on_body_entered"]
